@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3548] Feature: Use flash messages in the BE module
 - [#3930] Fix: Typo in the reference: boh -> both
 - [#3920] Fix: Crash on the second registration page
 - [#3910] Feature: Load records from the current page and its subpages in the grids
